# .emacs.d

./: #diary#  #helloWorld#  #init.el#  .#berezhnev.org  ..bookmarks.~undo-tree~.~undo-tree~  .bookmarks.~undo-tree~  .company-go.el.~undo-tree~  .dap-breakpoints  .emacs.desktop  .gitignore  .gitignore.swp  .init.el.~undo-tree~  .last-package-update-day  .lsp-session-v1  .setting-packages.el.~undo-tree~  README.org  agenda.el  berezhnev.el  berezhnev.org  bookmarks  bookmarks.bak  config.el  config.org  config_old1.el  config_old1.org  custom.el  early-init.el  elfeed.org  eww-bookmarks  example.org  exwm.el  flycheck_init.el  habit-quest-data.el  history  init.el  init.el-old  init.elc  init.el~  marginalia.org  minimal.el  (+16 more)
.cache/: .treemacs-persist.~undo-tree~  treemacs-persist  treemacs-persist~
.stfolder/: syncthing-folder-b36289.txt
auto-save-list/: .saves-114736-salieri~  .saves-1160948-salieri~  .saves-1472388-salieri~  .saves-149141-salieri~  .saves-16438-nixos~  .saves-1822957-salieri~  .saves-2229399-salieri~  .saves-2512241-salieri~  .saves-2541000-salieri~  .saves-25896-nixos~  .saves-3163040-salieri~  .saves-3504361-salieri~  .saves-3674226-salieri~  .saves-3793028-salieri~  .saves-3802244-salieri~  .saves-543945-salieri~  .saves-546472-salieri~  .saves-599427-salieri~  .saves-726626-salieri~  .saves-783925-nixos~  .saves-860829-salieri~
config/: appereance-setting.el  appereance.el  complition.el  dired-setting.el  dired.el  exwm.el  flycheck.el  (+24 more)
rust-playground/at-2022-09-12-211444/: Cargo.toml
rust-playground/at-2022-09-12-211444/src/: #main.rs#
(+272 files in other folders)
