# snippet of code @ 2022-09-12 21:14:44

# === Rust Playground ===
# This snippet is in: ~/.emacs.d/rust-playground/at-2022-09-12-211444/

# Execute the snippet: C-c C-c
# Delete the snippet completely: C-c k
# Toggle between main.rs and Cargo.toml: C-c b

[package]
name = "foo"
version = "0.1.0"
authors = ["Rust Example <rust-snippet@example.com>"]
edition = "2018"

[dependencies]